# projet_fin_annee

./: CMakeLists.txt  README.md  bd_grande.csv  bd_petite.csv  csvReader.c  csvReader.h  dataBase_reader.c  dataBase_reader.h  file1.c  file1.h  file_reader.c  file_reader.h  htmlCreate.c  htmlGenerator.c  htmlGenerator.h  htmlIndexPage.c  htmlPersonPage.c  main.c  menu.c  menu.h  queryResFile.c  structDataBase.c  structDataBase.h  structNodeTrie.c  structNodeTrie.h  structPerson.c  structPerson.h  test.c
resources/: script.js  scriptIndex.js  scriptPerson.js  style.css  style2.css  styleIndexPage.css  styleQueryPage.css  treeScript.js
structures_fonctions/: structDataBase.c  structNodeTrie.c  structPerson.c
structures_headers/: structDataBase.h  structNodeTrie.h  structPerson.h
